--- a/package.json
+++ b/package.json
@@ -40,15 +40,21 @@
     "@vaadin/vaadin-themable-mixin": "^1.6.1"
   },
   "scripts": {
-    "generate-typings": "gen-typescript-declarations --outDir . --verify"
+    "debug": "web-test-runner test/*.test.js --node-resolve --watch",
+    "generate-typings": "gen-typescript-declarations --outDir . --verify",
+    "test": "web-test-runner test/*.test.js",
+    "test:sauce": "TEST_ENV=sauce npm test"
   },
   "devDependencies": {
+    "@esm-bundle/chai": "^4.1.5",
+    "@open-wc/testing-helpers": "^1.8.0",
     "@polymer/gen-typescript-declarations": "^1.6.2",
     "@polymer/iron-component-page": "^4.0.0",
-    "@polymer/iron-form": "^3.0.0",
     "@polymer/iron-input": "^3.0.0",
     "@polymer/iron-test-helpers": "^3.0.0",
-    "@vaadin/vaadin-dialog": "^2.2.1",
-    "wct-browser-legacy": "^1.0.1"
+    "@vaadin/vaadin-dialog": "^2.5.1",
+    "@web/test-runner": "^0.7.24",
+    "@web/test-runner-saucelabs": "0.0.2",
+    "sinon": "^9.0.3"
   }
 }
