--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,6 +15,9 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Run ESLint
+      run: npm run lint:js
+
     - name: Generate typings
       run: npm run generate-typings
 
