--- a/package.json
+++ b/package.json
@@ -24,6 +24,26 @@
     "src",
     "theme"
   ],
+  "scripts": {
+    "debug": "web-test-runner test/*.test.js --node-resolve --watch",
+    "generate-typings": "gen-typescript-declarations --outDir . --verify",
+    "lint:js": "eslint src theme test",
+    "screenshots": "hermione test/visual/test.js --update-refs",
+    "test": "web-test-runner test/*.test.js",
+    "test:sauce": "TEST_ENV=sauce npm test",
+    "test:visual": "hermione test/visual/test.js"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  },
   "dependencies": {
     "@polymer/iron-a11y-announcer": "^3.0.0",
     "@polymer/iron-a11y-keys-behavior": "^3.0.0",
@@ -39,14 +59,6 @@
     "@vaadin/vaadin-text-field": "^2.8.0",
     "@vaadin/vaadin-themable-mixin": "^1.6.1"
   },
-  "scripts": {
-    "debug": "web-test-runner test/*.test.js --node-resolve --watch",
-    "generate-typings": "gen-typescript-declarations --outDir . --verify",
-    "screenshots": "hermione test/visual/test.js --update-refs",
-    "test": "web-test-runner test/*.test.js",
-    "test:sauce": "TEST_ENV=sauce npm test",
-    "test:visual": "hermione test/visual/test.js"
-  },
   "devDependencies": {
     "@esm-bundle/chai": "^4.1.5",
     "@open-wc/testing-helpers": "^1.8.0",
@@ -57,9 +69,15 @@
     "@vaadin/vaadin-dialog": "^2.5.1",
     "@web/test-runner": "^0.7.26",
     "@web/test-runner-saucelabs": "0.0.4",
+    "eslint": "^7.9.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "hermione": "^3.8.6",
     "hermione-esm": "^0.4.0",
     "hermione-sauce": "^0.1.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
+    "prettier": "^2.1.2",
     "sinon": "^9.0.3"
   }
 }
