Enable test coverage

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "lint:css": "stylelint src/*.js theme/**/*-styles.js",
     "preversion": "magi update-version",
     "screenshots": "hermione test/visual/test.js --update-refs",
-    "test": "web-test-runner test/*.test.js",
+    "test": "web-test-runner test/*.test.js --coverage",
     "test:sauce": "TEST_ENV=sauce npm test",
     "test:visual": "hermione test/visual/test.js"
   },
